--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -4,3 +4,15 @@ mat-form-field, textarea {
 mat-spinner {
   margin: auto;
 }
+input[type="file"] {
+  visibility: hidden;
+}
+.image-preview {
+  height: 5rem;
+  margin: 16px 0;
+}
+img{
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
