--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,17 +1,26 @@
 <mat-card>
   <mat-spinner *ngIf="isLoading===true"></mat-spinner>
-  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="isLoading===false">
+  <form [formGroup]="form" (submit)="onSavePost()" *ngIf="isLoading===false">
     <mat-form-field>
-      <input matInput type="text" name ="title" [ngModel]="post?.title"
-      required #postTitle="ngModel"
+      <input matInput type="text"
+      formControlName="title"
       placeholder="Post Title">
-      <mat-error *ngIf="postTitle.invalid">Please enter title</mat-error>
+      <mat-error *ngIf="form.get('title').invalid">Please enter title</mat-error>
     </mat-form-field>
+    <div>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">
+        Pick Image
+      </button>
+      <input type="file" #filePicker (change)="onImagePicked($event)">
+    </div>
+    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+      <img [src]="imagePreview" [alt] ="form.value.title">
+    </div>
     <mat-form-field>
-      <textarea matInput rows="3" name ="content" [ngModel]="post?.content"
-      required #postContent="ngModel"
+      <textarea matInput rows="3"
+      formControlName="content"
       placeholder="Post Content"></textarea>
-      <mat-error *ngIf="postContent.invalid">Please enter content</mat-error>
+      <mat-error *ngIf="form.get('content').invalid">Please enter content</mat-error>
     </mat-form-field>
     <button mat-raised-button color="accent" type="submit">
       Save Button
