--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -14,6 +14,11 @@
     </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
+<mat-paginator [length]="totalPosts" [pageSize]="postPerPage"
+[pageSizeOptions]="pageSizeOptions" (page)="onChangePage($event)"
+*ngIf="postsStored.length > 0"></mat-paginator>
+
+
 <p class="info-text mat-body-1" *ngIf="postsStored.length === 0 && !isLoading">
   No posts added yet
 </p>
