--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -11,8 +11,7 @@
       #passwordInput="ngModel" required>
       <mat-error *ngIf="passwordInput.invalid">Please enter valid password</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="accent" type="submit">
-      Login
-    </button>
+    <button mat-raised-button color="accent" type="submit" *ngIf="!isLoading">
+      Login</button>
   </form>
 </mat-card>
