--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -11,7 +11,7 @@
       #passwordInput="ngModel" required>
       <mat-error *ngIf="passwordInput.invalid">Please enter valid password</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="accent" type="submit">
+    <button mat-raised-button color="accent" type="submit" *ngIf="!isLoading">
       Sign Up
     </button>
   </form>
